maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	droite
        ^Escaper:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if(estFaceMur){return true}
        ^