maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {

def keepHandOnSideWall:Boolean{
	droite
	if(estFaceMur){return true}
     else{return false}
}
while(!estSurBiscuit &&  keepHandOnSideWall==true){
if (!estFaceMur){avance()}
else{droite}	
}

}
